@@ -1,3 +1,8 @@
+2006-01-22  Thomas Schwinge  <tschwinge@gnu.org>
+
+	* linux/src/drivers/net/ne2k-pci.c (ne_block_input, ne_block_output):
+	Fix previous patch.
+
 2005-07-12  Guillem Jover  <guillem@hadrons.org>
 
 	* configure: Regenerated.
